fix(task-new): alignment fixes/css refactor

--- a/src/elements/content-sidebar/activity-feed/task-new/AssigneeList.scss
+++ b/src/elements/content-sidebar/activity-feed/task-new/AssigneeList.scss
@@ -15,12 +15,8 @@ $bcs-AssigneeList-avatar-size: 28px;
     padding: 3px 0;
 }
 
-.bcs-AssigneeList-detailsStatus {
-    color: $bdl-neutral-02;
-    font-size: 12px;
-}
-
 .bcs-AssigneeList-listItemAvatar {
+    font-size: 9px;
     height: $bcs-AssigneeList-avatar-size;
     margin-right: 10px;
     width: $bcs-AssigneeList-avatar-size;
@@ -30,11 +26,12 @@ $bcs-AssigneeList-avatar-size: 28px;
     line-height: 16px;
 }
 
-.bcs-AssigneeList-listItemStatus {
+.bcs-AssigneeList-detailsStatus {
     color: $bdl-neutral-02;
 }
 
-.bcs-AssigneeList-expandBtn {
+.bcs-AssigneeList-toggleBtn {
     color: $bdl-box-blue;
     margin-left: $bcs-AssigneeList-avatar-size + 10px;
+    margin-top: 10px;
 }
